# nonebot_plugin_mockingbird

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_mockingbird/: __init__.py  config.py  data_source.py  download.py
nonebot_plugin_mockingbird/resource/: config.json  model_list.json
